# TML

./: .clang-format  .gitattributes  .gitignore  .gitmodules  0001-better-data-structure-for-earley-item-storage.patch  1  CMakeLists.txt  Development.md  Doxyfile  INSTALL.md  Makefile  README.md  T3  algo.md  bdd.cpp  bdd.h  bdd.test.cpp  build.sh  checks.sh  clang-format.sh.in  clause.cpp  clause.h  clean.sh  coverage.sh  debug-js.sh  debug.sh  defs.h  dict.cpp  dict.h  dimacs.cpp  dnf.cpp  dnf.h  driver.cpp  driver.h  ed.c  ed.h  example  example_neg  example_unsat  formatter.cpp  (+43 more)
js/: CMakeLists.txt  build.sh  debug.sh  embindings.h  embindings.inc.h  release.sh  test.html  test.js  tml.cpp  tml.idl  tmljs
src/: 2cnf_extraction_test.cpp  ARCHITECTURE.md  CMakeLists.txt  Makefile.nocmake  OPTIMIZATION.md  TML.h  addbits.cpp  addbits.h  analysis.cpp  analysis.h  archive.cpp  archive.h  ast.cpp  ast.h  async_reader.h  bdd.cpp  bdd.h  bdd_arith.cpp  bdd_ext.cpp  binary.cpp  bit_universe.cpp  bit_universe.h  bitsmeta.cpp  bitsmeta.h  builtins.cpp  builtins.h  builtins_factory.cpp  builtins_factory.h  char_defs.h  constants.h  cpp_gen.cpp  cpp_gen.h  cqc.cpp  debug.sh  defs.h  dict.cpp  dict.h  dict_tmp.cpp  driver copy.cpp  driver copy.h  (+103 more)
tests/: CMakeLists.txt  README.md  archive.test.cpp  archive.test.data.h  archive.test.sh  bdd.test.cpp  bin2cpp.cpp  cache_test.cpp  cache_test.sh  canonicity_test.cpp  canonicity_test.sh  dcg  dyck  e  example_sof  fof  input.test.cpp  input.test.file  input.test.sh  memory_map.test.bat  memory_map.test.cpp  memory_map.test.sh  output.test.cpp  output.test.sh  parse_error.test.cpp  parse_error.test.sh  pnf_tests  query.test.cpp  rand_prog.cpp  rtest.sh  run_all_development_tests.sh  run_all_nodejs_regression_tests.sh  run_all_regression_tests.sh  run_nodejs_regression_tests.sh  run_regression_tests.sh  run_regression_tests_with.sh  run_unit_tests.sh  seq_example  simple_test.h  str_example  (+22 more)
tests/2cnf_extraction/: 2cnf_extraction.test.sh
tests/bdd/: cache_test.cpp  cache_test.sh  canonicity_test.cpp  canonicity_test.sh
tests/beyondcfg/: csg.tml  csg2.tml  csg3_sval.tml  csg4_sval.tml
tests/beyondcfg/expected/: csg.tml.dump  csg4_sval.tml.dump
tests/development/: dcg  dyck  example_sof  example_sof_fail  fof  str_example
tests/development/beyondcfg/: csg.tml  csg2.tml  csg3_sval.tml  csg4_sval.tml
tests/development/builtins_bt/: leq_bt.tml
tests/development/cqnc/: cqnc_test.tml
tests/development/earley/: 24000_15_DYCKs_LANGUAGE.tml.txt  bin_lr_test.g  dycks.tml  earley_tml  errortest1.tml  grammar.tml  graph1.dot  graph2.dot  graph3.dot  graph4.dot  parse_graph0.tml  parse_graph0_tml_earley.g  parse_graph1.tml  parse_graph5.tml  parse_graph6.tml  parse_regression_tests  parse_rules0.tml  parse_rules1.tml  parse_rules6.tml  parse_rules_tml_earley.g  regress_5.g  stress.tml  stress_1024.tml  stress_128.tml  stress_16.tml  stress_32.tml  stress_512.tml  stress_64.tml
tests/development/ebnf/: ba.tml  ba1.tml  basic.tml  basicFail.tml  tartring.tml  test0.tml
tests/development/eval/: heads.tml  mixed.tml  trans_sym.tml  vars.tml
tests/development/eval_partial_tree_proofs/: trans_sym.tml  vars.tml
tests/development/fixpoint/: slow_unsat.tml  unmarried_married_unsat.tml  unmarried_unmarried.tml
tests/development/fol_v2/: fof0.tml  fof1.tml
tests/development/forest_proofs/: married_unmarried.tml  unmarried_married.tml
tests/development/macro/: constant_bug.tml  m2.tml  m3.tml  m4.tml
tests/development/nested_progs/: while1.tml
tests/development/optimization/: simple_cqc.tml  simple_squaring.tml
tests/development/partial_forest_proofs/: married_unmarried.tml  unmarried_married.tml
tests/development/partial_tree_proofs/: unmarried_married.tml
tests/development/quantifiers/: leq_1.tml  lucca0.tml  t01.tml  unique2.tml
tests/development/quantifiers_safe/: 2heads.tml  ev_1.tml  fa2.tml  faex.tml  fe.tml  fol_0.tml  fol_add.tml  fol_dm0.tml  fol_dm2.tml  fol_neg1.tml  fol_qp0.tml  fol_qp1.tml  leq_0.tml  t0.tml  tomas0.tml  unique0.tml  unique1.tml
tests/development/query_optimization/: number_of_predicates_by_rule.sh
tests/development/regexp/: options  reg1.tml  reg2.tml  reg3smallestmatch.tml  reg4.tml
tests/development/regexp-level/: options
tests/development/safety/: safe.tml
tests/development/sol/: t20.tml  t21.tml  t30.tml  t31.tml  t32.tml  tml
tests/development/tree_proofs/: options  slow.tml
tests/development/type_system/: 06_VARIABLES.tml  08_RECURSION.tml  09_TRANSITIVE_CLOSURE.tml  11_DELETION.tml  13_armageddon.tml  1_infer.tml  1_infer_assign.tml  1typefail.tml  2.tml  (+10 more)
tests/ebnf/: ba.tml  basic.tml
tests/intro/: 02_FACTS.tml  04_ARITY.tml  05_RULES.tml  15_DYCKs_LANGUAGE.tml
tests/macro/: m1.tml  m2.tml  m4.tml
tests/old/: dimacs.cpp
tests/performance/: erathos_basic.tml
tests/quantifiers/: fol_0.tml  t0.tml
tests/regression/: add1  add2  bw_xor  count.tml  duplicit_rule.tml  erathos_basic  leq1  leq2  mul1  mul_ext.tml  multihead_form.tml  negation_in_head.tml  negation_in_head_fail.tml  rnd.tml  shl  shl.tml  shr  tml
tests/sat/: bdd.cpp  bdd.h  defs.h  main.cpp  memory_map.h
tests/sppf/: misc-thesis-disambiguity.tml  scottpaper-example2.tml  scottpaper-example3.tml
tests/tc/: rtest.sh  tcgen.cpp  tcrand.cpp  tcres.cpp  test.sh
tests/varbits/: compounds011010.tml  compounds1.tml  compounds1a.tml  compounds1b.tml  compounds1c-null1.tml  compounds1c.tml  compounds1c1.tml  compounds1c2.tml  compounds1c3.tml  compounds1c3a.tml  compounds1e.tml  compounds3_1a.tml  compounds3a.tml  compoundsCons1.tml  compoundsCons2.tml  compoundsCons3.tml  compoundsCons3a.tml  compoundsCons5.tml  compoundsCons5a.tml  compoundsCons5b.tml  compoundsCons5c.tml  compoundsLoop1.tml  compoundsLoop2.tml  compoundsLoop3.tml  compoundsLoop3a.tml  count1a.tml  inputBits1.tml  inputEQ1.tml  inputEQ1a.tml  inputEQ1a2.tml  inputEQ1a2b.tml  inputEQ1a2b3.tml  inputEQ1a2b5.tml  inputEQ1a2bNum.tml  inputEQ1a2bNum5.tml  inputEQ1a2bNum5a.tml  inputEQ1a2c.tml  inputEQ1b.tml  inputEQ1c.tml  inputEQbug1.tml  (+25 more)
(+587 files in other folders)
